# escli

./: LICENSE  README.md  escli  go.mod  go.sum  main.go  pyproject.toml
cmd/: bulkUpload.go  mappings.go  ping.go  query.go  root.go  search.go  upload.go
lib/: client.go
