[tool.poetry]
name = "escli"
version = "0.1.0"
description = "A command line interface for Elasticsearch"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
